--- a/index.css
+++ b/index.css
@@ -55,6 +55,7 @@ h1{
 h2{
     font-weight: 600;
     color: var(--white);
+    font-family: Monotype Corsiva;
 }
 h3,
 h4,
@@ -62,6 +63,9 @@ h5,
 h6{
     font-weight: 500;
     color: (--white);
+}
+h3{
+    font-family: Matura MT Script Capitals;
 }
 p{
     font-size: 16px;
